--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -1,22 +1,31 @@
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  padding: 0 100px;
+nav > div {
+  @include flex-space-between;
   width: 100%;
   height: 72px;
 
-  nav a {
-    color: $white;
-    text-decoration: none;
-    padding: 0 20px;
-    opacity: 0.69;
+  img {
+    cursor: pointer;
+  }
 
-    &:hover {
-      padding-bottom: 24px;
-      border-bottom: 2px solid $orange;
-      opacity: 1;
+  ul {
+    @include flex-space-between;
+    width: 500px;
+    list-style: none;
+
+    li {
+
+      a {
+        color: $white;
+        text-decoration: none;
+        opacity: 0.69;
+
+        &:hover {
+          padding-bottom: 24px;
+          border-bottom: 2px solid $orange;
+          opacity: 1;
+        }
+      }
+
     }
   }
 }
