--- a/scss/section-1.scss
+++ b/scss/section-1.scss
@@ -1,126 +1,134 @@
 .section-1 {
   @include flex-centered;
-  gap: 150px;
   position: relative;
-  height: 81.5vh;
+  height: 639px;
 
   &::before {
     content: "";
     position: absolute;
+    top: 0px;
     width: 100%;
     height: 100%;
-    background: url(../images/section-1.png) no-repeat center / cover;
+    background: url(../images/section-1.png) no-repeat 50% 44% / cover;
     opacity: 0.3;
     z-index: -1;
   }
 
-  .content {
-    width: 651px;
-    height: 425px;
+  div {
+    @include flex-space-between;
 
-    h1 {
-      color: $white;
-      width: 430px;
-      padding: 20px 0;
-      font-size: 2.25rem;
-      line-height: 43.2px;
-    }
-
-    p {
-      font-weight: $semibold;
-      color: $white;
-      padding: 40px 0;
-      line-height: 23px;
-      opacity: 0.8;
-    }
-
-    button {
-      height: 42px;
-      width: 135px;
-      cursor: pointer;
-      color: $white;
-      background: none;
-      border: 2px solid $white;
-    }
-  }
-
-  .sign-in {
-    display: flex;
-    flex-direction: column;
-    height: 425px;
-    border-radius: 5px;
-    width: 360px;
-    background: $white;
-
-    .wrapper {
-      padding: 30px 50px;
-    }
-
-    h1 {
+    .content {
       display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 0 0 0 50px;
-      font-size: 1.25rem;
-      border-radius: 5px 5px 0 0;
-      width: 100%;
-      height: 57px;
-      background: #F5F5F5;
+      align-items: flex-start;
+      flex-direction: column;
+      width: 651px;
+      height: 425px;
 
-      span {
-        color: $orange;
-        padding: 0 6px;
-      }
-    }
-
-    input {
-      width: 100%;
-      padding: 25px 10px 5px 10px;
-      border: none;
-      border-bottom: 1px solid #D8D8D8;
-      opacity: 0.5;
-
-      &::placeholder {
-        opacity: 0.4;
-      }
-    }
-
-    h3 {
-      font-size: 1rem;
-    }
-
-    .type {
-      padding-top: 29px;
-    }
-
-    form {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-      padding: 20px 0 10px 0;
-
-      input {
-        width: 12px;
-        accent-color: #2fa373;
+      h1 {
+        color: $white;
+        width: 430px;
+        padding: 20px 0;
+        font-size: 2.25rem;
+        line-height: 43.2px;
       }
 
-      label {
-        margin-right: 10px;
-        font-size: 9px;
+      p {
         font-weight: $semibold;
+        color: $white;
+        padding: 40px 0;
+        line-height: 23px;
+        opacity: 0.8;
+      }
+
+      button {
+        height: 42px;
+        width: 135px;
+        cursor: pointer;
+        color: $white;
+        background: none;
+        border: 2px solid $white;
       }
     }
 
-    a {
-      @include flex-centered;
-      font-weight: $semibold;
-      text-decoration: none;
-      font-size: 1.125rem;
-      color: $white;
-      border-radius: 0 0 5px 5px;
-      width: 100%;
-      height: 57px;
-      background: $green;
+    .sign-in {
+      display: flex;
+      flex-direction: column;
+      height: 425px;
+      border-radius: 5px;
+      width: 360px;
+      background: $white;
+
+      h1 {
+        display: flex;
+        align-items: center;
+        font-size: 19px;
+        padding: 0 50px;
+        border-radius: 5px 5px 0 0;
+        width: 100%;
+        min-height: 57px;
+        background: #F5F5F5;
+
+        span {
+          color: $orange;
+          padding: 0 6px;
+        }
+      }
+
+      form {
+        display: flex;       
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        height: 100%;
+        padding: 25px 50px;
+        
+        input {
+          padding: 25px 10px 5px 10px;
+          border: none;
+          width: 100%;
+          border-bottom: 1px solid #D8D8D8;
+          opacity: 0.5;
+
+          &::placeholder {
+            opacity: 0.4;
+          }
+        }
+
+        h3 {
+          font-size: 1rem;
+        }
+
+        .tos {
+          padding: 30px 0 20px 0;
+        }
+
+        .type-of-subscription {
+
+          input {
+            width: 12px;
+            margin-right: 5px;
+            accent-color: #2fa373;
+          }
+
+          label {
+            margin-right: 15px;
+            font-size: 9px;
+            font-weight: $semibold;
+          }
+        }
+      }
+
+      a {
+        @include flex-centered;
+        font-weight: $semibold;
+        text-decoration: none;
+        font-size: 1.125rem;
+        color: $white;
+        border-radius: 0 0 5px 5px;
+        width: 100%;
+        min-height: 57px;
+        background: $green;
+      }
     }
   }
 }
@@ -131,28 +139,33 @@
   height: 105px;
   background: $white;
 
-  .social {
+  div {
+    @include flex-space-between;
 
-    h2 {
-      font-size: 20px;
-      padding-bottom: 5px;
+    .social {
+      display: flex;
+      align-items: flex-start;
+      flex-direction: column;
+
+      h2 {
+        font-size: 20px;
+        padding-bottom: 5px;
+      }
+
+      p {
+        font-size: 14px;
+        width: 394px;
+        color: #86878B;
+      }
     }
 
-    p {
-      font-size: 14px;
-      width: 394px;
-      color: #86878B;
+    .social-icons {
+      width: 600px;
+      font-size: 2rem;
+      opacity: 0.65;
+      color: $orange;
+      cursor: pointer;
     }
-  }
 
-  .social-icons {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 500px;
-    font-size: 2rem;
-    opacity: 0.65;
-    color: $orange;
-    cursor: pointer;
   }
 }
