--- a/scss/section-3.scss
+++ b/scss/section-3.scss
@@ -1,6 +1,5 @@
 .section-3 {
   height: 596px;
-  border-bottom: 2px solid white;
 
   div {
     height: 100%;
@@ -12,8 +11,50 @@
     }
 
     .content {
+      width: 80%;
+      height: 70%;
       flex-direction: column;
+      align-items: flex-start;
       color: $white;
+
+      hr {
+        border-color: $orange;
+        background: red;
+        margin: 30px 0;
+      }
+
+      p {
+        font-size: 14px;
+        line-height: 20px;
+        width: 75%;
+      }
+
+      h1 {
+        width: 350px;
+        line-height: 43px;
+        font-size: 30px;
+      }
+
+      .content-box {
+        justify-content: flex-start;
+        gap: 20px;
+
+        .icon {
+          width: 50px;
+          height: 50px;
+          font-size: 20px;
+          border-radius: 50%;
+          background: $orange;
+        }
+
+        .content {
+          gap: 5px;
+          
+          h3 {
+            font-size: 14px;
+          }
+        }
+      }
     }
   }
 }
