--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,8 @@
 @import "section-1";
 @import "section-2";
 @import "section-3";
+@import "section-4";
+@import "section-5";
+@import "section-6";
+@import "section-7";
+@import "footer";
