HARD CODING DONE

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -10,7 +10,10 @@ footer {
       width: 600px;
       font-size: 25px;
       color: $orange;
-      cursor: pointer;
+
+      i {
+        cursor: $cursor;
+      }
     }
 
     p {
