--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -1,31 +1,39 @@
-nav > div {
-  @include flex-space-between;
+nav {
+  position: fixed;
   width: 100%;
-  height: 72px;
+  background: $black;
+  z-index: 99;
 
-  img {
-    cursor: pointer;
-  }
-
-  ul {
+  div {
     @include flex-space-between;
-    width: 500px;
-    list-style: none;
-
-    li {
-
-      a {
-        color: $white;
-        text-decoration: none;
-        opacity: 0.69;
-
-        &:hover {
-          padding-bottom: 24px;
-          border-bottom: 2px solid $orange;
-          opacity: 1;
+    width: 100%;
+    height: 72px;
+  
+    img {
+      cursor: $cursor;
+    }
+  
+    ul {
+      @include flex-space-between;
+      width: 500px;
+      list-style: none;
+  
+      li {
+  
+        a {
+          color: $white;
+          text-decoration: none;
+          opacity: 0.69;
+  
+          &:hover {
+            cursor: $cursor;
+            padding-bottom: 24px;
+            border-bottom: 2px solid $orange;
+            opacity: 1;
+          }
         }
+  
       }
-
     }
   }
 }
