--- a/scss/section-6.scss
+++ b/scss/section-6.scss
@@ -5,8 +5,8 @@
 
   div {
     @include flex-space-between;
-    height: 80%;
     flex-direction: column;
+    height: 82%;
 
     h1 {
       font-size: 36px;
@@ -15,6 +15,12 @@
     hr {
       border-color: #6696E2;
       margin: 25px 0 50px 0;
+    }
+
+    .swiper {
+      width: 100%;
+      height: 350px;
+      @import "swiper";
     }
 
     .all-feedbacks {
