--- a/scss/section-6.scss
+++ b/scss/section-6.scss
@@ -87,3 +87,20 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .section-6 {
+
+    div {
+      width: 100%;
+
+      h1 {
+        font-size: 25px;
+        text-align: center;
+      }
+
+      .all-feedbacks {
+      }
+    }
+  }
+}
