--- a/scss/section-7.scss
+++ b/scss/section-7.scss
@@ -115,3 +115,16 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .section-7 {
+
+    div {
+      width: 100%;
+
+      form {
+        width: 100%;
+      }
+    }
+  }
+}
