--- a/scss/section-6.scss
+++ b/scss/section-6.scss
@@ -2,10 +2,12 @@
   @include flex-centered;
   height: 591px;
   background: $white;
+  cursor: default;
 
   div {
     @include flex-space-between;
     flex-direction: column;
+    width: 100%;
     height: 82%;
 
     h1 {
