--- a/scss/section-7.scss
+++ b/scss/section-7.scss
@@ -105,16 +105,18 @@
         }
       }
 
-      button {
+      input[type="submit"] {
+        @include flex-centered;
         color: $white;
         background: $green;
         border: none;
         font-weight: $semibold;
         font-size: 15px;
         border-radius: 5px;
-        margin-bottom: 25px;
         width: 158px;
         height: 48px;
+        padding: 0;
+        margin: 0;
         cursor: $cursor;
         transition: 0.3s;
 
